# databend-admin

./: Cargo.toml  README.md
crates/databend-admin-cli/: Cargo.toml
crates/databend-admin-cli/src/: main.rs
crates/databend-admin-core/: Cargo.toml
crates/databend-admin-core/src/: lib.rs
docs/: architecture.md
examples/: AI_USE_CASES.md  OUTPUT_SAMPLES.md  USER_JOURNEYS.md
