[workspace]
members = [
  "crates/databend-admin-core",
  "crates/databend-admin-cli"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Yabloko Labs"]
repository = "https://github.com/yablokolabs/databend-admin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
databend-driver = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
