[package]
name = "databend-admin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
databend-admin-core = { path = "../databend-admin-core" }
